force-app/main/default/objects/Sync_Mapping__c/Sync_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Sync Mapping</label>
</CustomObject>