force-app/main/default/objects/Sync_Mapping__c/fields/Filter_11_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Filter_11_Mapping__c</fullName>
    <label>Filter 11 Mapping</label>
    <type>TextArea</type>
</CustomField>