force-app/main/default/objects/Sync_Mapping__c/fields/Filter_12_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Filter_12_Mapping__c</fullName>
    <label>Filter 12 Mapping</label>
    <type>TextArea</type>
</CustomField>