force-app/main/default/objects/Sync_Mapping__c/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <label>Filter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>