force-app/main/default/objects/Sync_Mapping__c/fields/Filtering_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filtering_Logic__c</fullName>
    <label>Filtering Logic</label>
    <type>TextArea</type>
</CustomField>