force-app/main/default/objects/Sync_Mapping__c/fields/Sync_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Sync_Mapping__c</fullName>
    <label>Sync Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>